--- a/local.ipynb
+++ b/local.ipynb
@@ -2,48 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ZmqCamera' from 'gstcamera.camera' (/Users/rdejana/Development/Git/rvrbot/gstcamera/camera/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [2]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mipywidgets\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mwidgets\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mwidgets\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgstcamera\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m ZmqCamera\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgstcamera\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m bgr8_to_jpeg\n",
+      "File \u001B[0;32m~/Development/Git/rvrbot/gstcamera/__init__.py:3\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mimage\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m bgr8_to_jpeg\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcamera\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Camera\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcamera\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m ZmqCamera\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcamera\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m OpenCvGstPiCamera\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'ZmqCamera' from 'gstcamera.camera' (/Users/rdejana/Development/Git/rvrbot/gstcamera/camera/__init__.py)"
+     ]
+    }
+   ],
    "source": [
-    "import ipywidgets.widgets as widgets\n"
+    "import ipywidgets.widgets as widgets\n",
+    "from gstcamera import ZmqCamera\n",
+    "from gstcamera import bgr8_to_jpeg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3d3d65010d54b259d1d1d8b2173060b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Controller()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# pip3 install opencv_python\n",
     "controller = widgets.Controller()\n",
     "display(controller)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -63,67 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7707fda46d64055a48a3ed7bddb4acb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatText(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "060700fe436b42999c832c6b24534e2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatText(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1482c8aa8de434cb1f9b5b52bb093a0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(FloatText(value=0.0, disabled=True), FloatText(value=0.0, disabled=True)), layou…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "camera = ZmqCamera()\n",
     "image = widgets.Image(format='jpeg', width=300, height=300)\n",
+    "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
+    "\n",
     "button_layout = widgets.Layout(width='100px', height='80px', align_self='center')\n",
     "\n",
     "\n",
